--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index-02.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index-02.html
@@ -6,11 +6,8 @@
     <title>HTML</title>
     <style>
         h1 {
-            font-size: 65px
-        }
-
-        h1 {
-            color: orange
+            font-size: 65px;
+            color: orange;
         }
 
         .background-2-style {
