--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index-02.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index-02.html
@@ -6,8 +6,30 @@
     <title>HTML</title>
     <style>
         h1 {
+            font-family: sans-serif;
             font-size: 65px;
             color: orange;
+        }
+
+        p {
+            font-size: 3em;
+            font-weight: 600;
+        }
+
+        #yellow {
+            background-color: yellow;
+        }
+
+        #red {
+            background-color: red;
+        }
+
+        #brown {
+            background-color: brown;
+        }
+
+        body {
+            font-size: 16px;
         }
 
         .background-2-style {
@@ -22,9 +44,9 @@
     <p class="background-2-style">Qual é a sua cor favorita?</p>
 
     <ul class="background-2-style">
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
+        <li id="yellow">Amarelo</li>
+        <li id="red">Vermelho</li>
+        <li id="brown">Marrom</li>
     </ul>
 </body>
 
