--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index-02.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index-02.html
@@ -4,38 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-        h1 {
-            font-family: sans-serif;
-            font-size: 65px;
-            color: orange;
-        }
-
-        p {
-            font-size: 3em;
-            font-weight: 600;
-        }
-
-        #yellow {
-            background-color: yellow;
-        }
-
-        #red {
-            background-color: red;
-        }
-
-        #brown {
-            background-color: brown;
-        }
-
-        body {
-            font-size: 16px;
-        }
-
-        .background-2-style {
-            background-color: orange;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -43,7 +12,7 @@
 
     <p class="background-2-style">Qual é a sua cor favorita?</p>
 
-    <ul class="background-2-style">
+    <ul class="background-style">
         <li id="yellow">Amarelo</li>
         <li id="red">Vermelho</li>
         <li id="brown">Marrom</li>
