--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/index-03.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/index-03.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style-03.css">
 </head>
 
 <body>
@@ -13,12 +13,18 @@
     <p>Top 3 dos melhores sites que existem na web</p>
 
     <ol>
-        Youtube
-        Twitch
-        Netflix
+        <li>Youtube</li>
+        <li>Twitch</li>
+        <li>Netflix</li>
     </ol>
 
     <p>Principais motivos para eu gostar deles</p>
+
+    <ul>
+        <li>Diversos vídeos</li>
+        <li>Lives de jogos que gosto</li>
+        <li>Séries e filmes</li>
+    </ul>
 </body>
 
 </html>
