Refatorando exercicios bloco-03

--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-01/index-01.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-01/index-01.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício de Fixação: box model</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Exercício de Fixação: Box Model</title>
+    <link rel="stylesheet" href="style-01.css">
 </head>
 
 <body>
