--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index-01.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index-01.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style-01.css">
 </head>
 
 <body>
     <h1>Exercícios 3.2</h1>
-
-    <p class="background-2-style">Qual é a sua cor favorita?</p>
-
+    <p class="background-style">Qual é a sua cor favorita?</p>
     <ul class="background-style">
         <li id="yellow">Amarelo</li>
         <li id="red">Vermelho</li>
