--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-02/index-02.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-02/index-02.html
@@ -9,15 +9,10 @@
 
 <body>
     <h1>Exercícios de fixação 3.3</h1>
-
     <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario"/>
     <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba"/>
     <img src="https://bit.ly/3AVnjks" alt="bowser" class="bowser"/>
-
-    <p class="speach">
-        Gommba, do something!
-    </p>
-
+    <p class="speach">Gommba, do something!</p>
     <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon"/>
 </body>
 
