--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <link rel="stylesheet" type="text/css" href="style-01.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
