--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-01/index.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-01/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício de Fixação: Box Model</title>
-    <link rel="stylesheet" href="style-01.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
