--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-02/index.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-02/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Posicionamento de elementos</title>
-    <link rel="stylesheet" href="style-02.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
