--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-03/index.html
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-03/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style-03.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
