--- a/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-e-css-forms/exercicio-03/form.html
+++ b/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-e-css-forms/exercicio-03/form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -13,28 +14,43 @@
     </header>
 
     <main>
-      <fieldset>
-        <label for="full-name">Nome Completo:</label>
-        <input type="text" name="full-name" id="full-name" placeholder="Digite seu nome completo"
-        maxlength="40" minlength="10" required>
-        <br>
-        <label for="email">Endereço de e-mail:</label>
-        <input type="email" name="email" id="email" placeholder="Digite seu e-mail"
-        maxlength="50" minlength="10" required>
-        <br>
-        <input type="radio" id="destination1" className="radios" name="destination" value="Cidade" required>
-        <label for="destination1">Cidade</label>
-        <input type="radio" id="destination2" className="radios" name="destination" value="Campo" required>
-        <label for="destination2">Campo</label>
-        <input type="radio" id="destination3" className="radios" name="destination" value="Praia" required>
-        <label for="destination3">Praia</label>
-        <input type="radio" id="destination4" className="radios" name="destination" value="Montanhas" required>
-        <label for="destination4">Montanhas</label>
-        <br>
-        <label for="why">Por que você deveria ser a pessoa desenvolvedora escolhida pelo concurso TrybeTrip?</label>
-        <br>
-        <textarea name="why" id="why" cols="60" rows="10" placeholder="Digite sua resposta vencedora aqui"></textarea>
-      </fieldset>
+      <form action="" method="get">
+        <fieldset>
+          <label for="full-name">Nome Completo:</label>
+          <input type="text" name="full-name" id="full-name" placeholder="Digite seu nome completo"
+          maxlength="40" minlength="10" required>
+          <br>
+          <label for="email">Endereço de e-mail:</label>
+          <input type="email" name="email" id="email" placeholder="Digite seu e-mail"
+          maxlength="50" minlength="10" required>
+          <br>
+          <input type="radio" id="destination1" className="radios" name="destination" value="Cidade" required>
+          <label for="destination1">Cidade</label>
+          <input type="radio" id="destination2" className="radios" name="destination" value="Campo" required>
+          <label for="destination2">Campo</label>
+          <input type="radio" id="destination3" className="radios" name="destination" value="Praia" required>
+          <label for="destination3">Praia</label>
+          <input type="radio" id="destination4" className="radios" name="destination" value="Montanhas" required>
+          <label for="destination4">Montanhas</label>
+          <br>
+          <label for="why">Por que você deveria ser a pessoa desenvolvedora escolhida pelo concurso TrybeTrip?</label>
+          <br>
+          <textarea name="why" id="why" cols="60" rows="10" placeholder="Digite sua resposta vencedora aqui"></textarea>
+          <br>
+          <label for="date">Qual a melhor data para realizar sua viagem?</label>
+          <input type="date" id="date">
+          <br>
+          <input type="checkbox" name="promo" id="promo">
+          <label for="promo">Gostaria de receber outras incríceis oportunidades oferecidas pela Trybe.</label>
+          <br>
+          <input type="checkbox" name="agreement" id="agreement">
+          <label for="agreement">Concordo que imagens de minhas férias poderão ser usadas para
+            divulgação de concursos futuros.</label>
+        </fieldset>
+        <button type="submit" id="submit-btn">Participar do concurso TrybeTrip</button>
+        <button type="button" id="clear-btn">Apagar informações</button>
+      </form>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
