Adiciona main e footer

--- a/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-03-css-flexbox-parte-01/exercicio-01/index.html
+++ b/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-03-css-flexbox-parte-01/exercicio-01/index.html
@@ -24,9 +24,46 @@
     </header>
 
     <main>
-      <div>
-        <p>Take a look at some of the technologies wich you will learn in our fundamentals and front-end module!</p>
-      </div>
+      <section>
+        <p id="p-presentation">Take a look at some of the technologies wich you will learn in our fundamentals and front-end module!</p>
+      </section>
+
+      <section id="techs-container">
+        <div class="logo-techs">
+          <p class="tech-names">HTML</p>
+          <img class="logo-techs-imgs" src="./images/html-logo.png" alt="Logotipo do HTML">
+        </div>
+
+        <div class="logo-techs">
+          <p class="tech-names">CSS</p>
+          <img class="logo-techs-imgs" src="./images/css-logo.png" alt="Logotipo do CSS">
+        </div>
+
+        <div class="logo-techs">
+          <p class="tech-names">JAVASCRIPT</p>
+          <img class="logo-techs-imgs" src="./images/javaScript-logo.png" alt="Logotipo do JavaScript">
+        </div>
+
+        <div class="logo-techs">
+          <p class="tech-names">REACT</p>
+          <img class="logo-techs-imgs" src="./images/react-logo.png" alt="Logotipo do React">
+        </div>
+
+        <div class="logo-techs">
+          <p class="tech-names">RTL</p>
+          <img class="logo-techs-imgs" src="./images/rtl-logo.png" alt="Logotipo do RTL">
+        </div>
+
+        <div class="logo-techs">
+          <p class="tech-names">REDUX</p>
+          <img class="logo-techs-imgs" src="./images/redux-logo.png" alt="Logotipo do Redux">
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <img class="logo-socials" src="./images/instagram-logo.png" alt="Logotipo do Instagram">
+      <img class="logo-socials" src="./images/linked-in-logo.png" alt="Logotipo do LinkedIn">
+    </footer>
   </body>
 </html>
