--- a/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-03-css-flexbox-parte-01/exercicio-01/index.html
+++ b/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-03-css-flexbox-parte-01/exercicio-01/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="container">
       <div>
         <img id="logo-trybe" src="./images/trybe-logo.jpg" alt="Logotipo da Trybe">
       </div>
@@ -23,7 +23,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container">
       <section>
         <p id="p-presentation">Take a look at some of the technologies wich you will learn in our fundamentals and front-end module!</p>
       </section>
@@ -61,7 +61,9 @@
       </section>
     </main>
 
-    <footer>
+    <hr>
+
+    <footer class="container">
       <img class="logo-socials" src="./images/instagram-logo.png" alt="Logotipo do Instagram">
       <img class="logo-socials" src="./images/linked-in-logo.png" alt="Logotipo do LinkedIn">
     </footer>
