--- a/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-03-css-flexbox-parte-01/exercicio-01/index.html
+++ b/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-03-css-flexbox-parte-01/exercicio-01/index.html
@@ -61,11 +61,15 @@
       </section>
     </main>
 
-    <hr>
-
     <footer class="container">
-      <img class="logo-socials" src="./images/instagram-logo.png" alt="Logotipo do Instagram">
-      <img class="logo-socials" src="./images/linked-in-logo.png" alt="Logotipo do LinkedIn">
+      <div>
+        <hr>
+      </div>
+
+      <div>
+        <img class="logo-socials-imgs" src="./images/instagram-logo.png" alt="Logotipo do Instagram">
+        <img class="logo-socials-imgs" src="./images/linked-in-logo.png" alt="Logotipo do LinkedIn">
+      </div>
     </footer>
   </body>
 </html>
